--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ EXTERNAL_BASE_URL=https://localhost/
 
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
-POSTGRES_PASSWORD=prp-esgi
-POSTGRES_USER=prp
-POSTGRES_DB=marchand
+POSTGRES_PASSWORD=pgpass
+POSTGRES_USER=pguser
+POSTGRES_DB=product
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
