--- a/api-user/package.json
+++ b/api-user/package.json
@@ -1,9 +1,10 @@
 {
   "name": "api-user",
   "version": "0.0.1",
-  "description": "This is an API for CRUD operations on a marchand entity",
+  "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -12,6 +13,10 @@
     "http": "0.0.1-security",
     "jsonschema": "^1.2.6",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
     "spdy": "^4.0.2"
   },
   "devDependencies": {
