--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
     ports:
       - 3000
         
-  server:
-    build: server
+  api-product:
+    build: api-product
     env_file: .env
     depends_on:
       - mongo
     volumes:
       - /app/node_modules
-      - ./server:/app
+      - ./api-product:/app
     ports:
       - 3000
 
@@ -46,13 +46,12 @@ services:
 
   nginx:
     build: nginx
-    container_name: nginx
     restart: 'on-failure'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/html:/etc/nginx/html
     depends_on:
-      - server
+      - api-product
       - api-user
       - client
     ports:
