--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ server {
     }
 
     location /api/product/ {
-        proxy_pass https://api-product:3000/;
+        proxy_pass https://api-product:3000/products/;
     }
 
     location /api/events/ {
@@ -43,7 +43,7 @@ server {
         proxy_http_version 1.1;
         chunked_transfer_encoding off;
         
-        proxy_pass https://api-product:3000/;
+        proxy_pass https://api-product:3000/events/;
     }
 
     error_page 404 /404.html;
