--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,7 @@ server {
     proxy_set_header        X-Real-IP $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Proto $scheme;
+    proxy_set_header        X-NginX-Proxy true;
 
     location / {
         proxy_pass https://client:3000/;
@@ -37,12 +38,13 @@ server {
     }
 
     location /api/events/ {
-        proxy_buffering off;
-        proxy_cache off;
+        proxy_read_timeout 24h;
         proxy_set_header Connection '';
         proxy_http_version 1.1;
         chunked_transfer_encoding off;
-        
+        proxy_buffering off;
+        proxy_cache off;
+
         proxy_pass https://api-product:3000/events/;
     }
 
