Still semi working

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,9 @@ server {
     ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
 
     ssl_prefer_server_ciphers on;
+
+    http2_max_field_size 64k;
+    http2_max_header_size 512k;
     
     proxy_set_header        Host $host;
     proxy_set_header        X-Real-IP $remote_addr;
